--- a/app/templates/docs/app/_index.html
+++ b/app/templates/docs/app/_index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../bower_components/google-code-prettify/src/prettify.css"></script>
     <!-- bower:css -->
     <!-- endbower -->
+    <!-- run `gulp wiredep:docs` to automaticaly populate bower styles dependencies -->
     <!-- endbuild -->
     <!-- build:css({.tmp,src,docs/app}) styles/app.css -->
     <link rel="stylesheet" href="styles/docs.css" />
@@ -25,10 +26,7 @@
 
 		<!-- build:js({docs/app,.tmp_docs}) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../bower_components/modernizr/modernizr.js"></script>
-    <script src="../bower_components/angular/angular.js"></script>
-    <script src="../bower_components/google-code-prettify/src/prettify.js"></script>
+    <!-- run `gulp wiredep:docs` to automaticaly populate bower script dependencies -->
     <!-- endbower -->
     <!-- endbuild -->
 
