--- a/app/templates/docs/app/_index.html
+++ b/app/templates/docs/app/_index.html
@@ -1,9 +1,15 @@
 <!doctype html>
 <html ng-app="docApp">
 	<head>
+
 		<!--
 		<base href="/" ></base>
 		-->
+
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+
 		<title>docs</title>
 
     <!-- build:css({docs/app,.tmp,src}) styles/vendor.css -->
@@ -17,6 +23,10 @@
     <link rel="stylesheet" href="styles/docs.css" />
     <!-- endbuild -->
 
+    <!-- build:js scripts/modernizr.js -->
+    <script src="../bower_components/modernizr/modernizr.js"></script>
+    <!-- endbuild -->
+ 
 	</head>
 	<body>
 
